button mobile fix

--- a/src/sass/views/report.sass
+++ b/src/sass/views/report.sass
@@ -71,7 +71,7 @@
         flex-direction: column
         .field
             margin-bottom: 5px
-    &.select        
+    &.select
         .option
             display: flex
             align-items: center
@@ -84,6 +84,7 @@
             transition: all .3s ease
             &.is-large-text
                 width: auto
+                height: auto
                 border-radius: 5px
                 padding: 0 10px
                 margin-bottom: 20px
